--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -5,17 +5,23 @@
 
 
     <EditTextPreference
-            android:defaultValue="@string/pref_location_default"
-            android:inputType="text"
-            android:key="@string/pref_location_key"
-            android:singleLine="true"
-            android:title="@string/pref_location_label" />
+        android:defaultValue="@string/pref_location_default"
+        android:inputType="text"
+        android:key="@string/pref_location_key"
+        android:singleLine="true"
+        android:title="@string/pref_location_label" />
 
-        <ListPreference
-            android:defaultValue="@string/pref_units_metric"
-            android:entries="@array/pref_units_options"
-            android:entryValues="@array/pref_units_values"
-            android:key="@string/pref_units_key"
-            android:title="@string/pref_units_label" />
+    <ListPreference
+        android:defaultValue="@string/pref_units_metric"
+        android:entries="@array/pref_units_options"
+        android:entryValues="@array/pref_units_values"
+        android:key="@string/pref_units_key"
+        android:title="@string/pref_units_label" />
+    <CheckBoxPreference
+        android:defaultValue="@bool/show_notifications_by_default"
+        android:key="@string/pref_enable_notifications_key"
+        android:summaryOff="@string/pref_enable_notifications_false"
+        android:summaryOn="@string/pref_enable_notifications_true"
+        android:title="@string/pref_enable_notifications_label" />
 
 </PreferenceScreen>
